--- a/Backend/config/.env
+++ b/Backend/config/.env
@@ -1,5 +1,5 @@
 PORT=8000
-MONGO_URI="mongodb+srv://vignesh:vignesh@cluster0.y6clk.mongodb.net/"
+MONGO_URI="mongodb+srv://vignesh:vignesh1@cluster0.y6clk.mongodb.net/"
 JWT_SECRET_KEY = "randomtoken1234567890"
 JWT_EXPIRE = 7d
 ACTIVATION_SECRET = kjjklhfasdn*&%$%^JHG
