edit and delete button createds added

--- a/Backend/config/.env
+++ b/Backend/config/.env
@@ -1,10 +1,10 @@
 PORT=8000
-MONGO_URI="mongodb+srv://vignesh:vignesh1@cluster0.y6clk.mongodb.net/"
+MONGO_URI="mongodb+srv://dharunkumar2005cmd:1234@cluster0.lfsyp.mongodb.net/"
 JWT_SECRET_KEY = "randomtoken1234567890"
 JWT_EXPIRE = 7d
 ACTIVATION_SECRET = kjjklhfasdn*&%$%^JHG
 SMTP_HOST = smtp.gmail.com
 SMTP_PORT = 465
-SMTP_EMAIL = vickysololeveling1@gmail.com
+SMTP_EMAIL = dharunkumar2005cmd@gmail.com
 SMTP_PASSWORD = xfofixmbjfdfkjsr
 SMTP_SERVICE = gmail
