--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,12 @@
     "axios": "^1.7.9",
     "country-state-city": "^3.2.1",
     "cra-template": "1.2.0",
+    "dotenv": "^16.4.7",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.4.0",
     "react-lottie": "^1.2.10",
-    "react-router-dom": "^7.1.3",
+    "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
   },
